Fix nord selected color contrast in browser

--- a/app/src/main/resources/io/xpipe/app/resources/style/browser.css
+++ b/app/src/main/resources/io/xpipe/app/resources/style/browser.css
@@ -242,6 +242,10 @@
     -fx-background-color: -color-success-subtle;
 }
 
+.root.nord .browser .table-row-cell:selected, .root.nord .browser .table-row-cell:hover:selected {
+    -fx-background-color: -color-success-7;
+}
+
 .browser .table-row-cell:folder:drag-over {
     -fx-background-color: -color-success-muted;
 }
